syntax="proto3";
option java_multiple_files = true;
package com.dissertation;

message WriteRequest {
    string key = 1;
    bytes value = 2;
    string lastWriteTimestamp = 3;
}

message WriteResponse {
    string writeTimestamp = 1;
}

message ROTRequest {
    repeated string keys = 1;
}

message ROTResponse {
    map<string, bytes> values = 1;
    string stableTime = 2;
}

service WriteService {
    rpc write (WriteRequest) returns (WriteResponse);
}

service ROTService {
    rpc rot (ROTRequest) returns (ROTResponse);
}